force-app/main/default/objects/Solution_Provider_Product_Interface__c/Solution_Provider_Product_Interface__c.object-meta.xml
<CustomObject>
    <description>DPV (aka Core Service Provider) Products have interfaces associated with them. These interfaces include a status field that determines whether they&apos;re sellable or not. This validation is used on the Account record and in the Quoting process.</description>
    <label>Solution Provider Product Interface</label>
    <nameField>
        <label>Solution Provider Product Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Provider Product Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>