force-app/main/default/objects/Solution_Provider_Product_Interface__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this interface is currently Available/Sellable</inlineHelpText>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>