force-app/main/default/objects/Solution_Provider_Product_Interface__c/fields/Middleware__c.field-meta.xml
<CustomField>
    <fullName>Middleware__c</fullName>
    <label>Middleware</label>
    <length>100</length>
    <type>Text</type>
</CustomField>