force-app/main/default/objects/Solution_Provider_Product_Interface__c/fields/Parent_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Name__c</fullName>
    <label>Parent Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>