force-app/main/default/objects/Solution_Provider_Product_Interface__c/fields/Solution_Provider_Product__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Solution Provider Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solution_Provider_Product__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Core Processing Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Provider_Product__c</referenceTo>
    <relationshipLabel>Core Service Product Interfaces</relationshipLabel>
    <relationshipName>Solution_Provider_Product_Interfaces</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>